# aitoolsync

./: Cargo.toml  README.md  README.zh-CN.md  install.sh
.github/workflows/: release.yml
npm/: install.js  package.json
src/: platforms.rs  sync.rs
